tests/knowledge/testing-accounts-data/account-data-existsing-keys-xray/kms_key_arn_aws_managed/test/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-82ea5cf3",
                    "RouteTableId": "rtb-e24c0a9c"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-e24c0a9c",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-b57c52ce",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-bd9b60c0"
        }
    ]
}
